--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,167 @@
-/**************************/
-/* HEADER */
-/**************************/
+/*
+--- 01 Typography system
 
+- Font size (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 
+
+- Font weights 
+Default: 400
+
+- Line heights
+Default: 1
+small: 1.05
+Pharagraph default: 1.6
+
+
+-Spacing system
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+--- 02 Colors
+
+Primary: #e67e22
+Tints: #fdf2e9
+Shades: #CF711F
+Accents: 
+Greys
+#555
+#333
+
+
+--- 05 Shadows
+
+
+--- 06 Border radius
+Deafult 9px
+
+
+--- 07 Whitespace
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+
+*/
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  /*10px / 16 px = 0.625 = 62.5%*/
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Rubic", sans-serif;
+  line-height: 1;
+  font-weight: 400;
+  color: #555;
+}
+/* ************************ */
+/* General components */
+/* ************************ */
+
+.container {
+  max-width: 120rem;
+  padding: 0 9.2rem;
+  margin: 0 auto;
+  padding-bottom: 9.6rem;
+}
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.heading-primary {
+  font-size: 6.2rem;
+  font-weight: 700;
+  line-height: 1.05;
+  color: #333;
+  text-align: center;
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
+}
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+}
+.subheading {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #cf711f;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
+  padding-top: 8rem;
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  background-color: #e67e22;
+  text-decoration: none;
+  font-size: 2rem;
+  padding: 1.6rem 3.2rem;
+  border-radius: 0.9rem;
+  /*Ostavi animaciju uvijek ka izvornoj boji*/
+  transition: background-color 0.3s;
+}
+.btn--full:link,
+.btn--full:visited {
+  background-color: #e67e22;
+  color: #fff;
+}
+.btn--full:hover,
+.btn--full:active {
+  background-color: #cf711f;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: rgb(201, 192, 192);
+  /*kako ubaciti granicu unutar dugmeta*/
+  box-shadow: 0 0 0 3px #fff;
+}
+
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+/* ************************ */
+/* Header */
+/* ************************ */
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fdf2e9;
-
-  /* Because we want header to be sticky later */
-  height: 9.6rem;
+  background-color: #fae5d3;
+  /* Zato što hoćemo da bude kasnije sticky later */
+  height: 9.8rem;
   padding: 0 4.8rem;
-  position: relative;
 }
-
 .logo {
-  height: 2.2rem;
+  height: 11.2rem;
 }
 
-/**************************/
-/* NAVIGATION */
-/**************************/
-
+/* ************************ */
+/* Navigation */
+/* ************************ */
+/*Ovako podešavamo da bude jedan do drugog i da nema tački*/
 .main-nav-list {
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 4.8rem;
+  gap: 3.2rem;
 }
 
 .main-nav-link:link,
@@ -38,12 +173,10 @@
   font-size: 1.8rem;
   transition: all 0.3s;
 }
-
-.main-nav-link:hover,
+.main-nav-link:link,
 .main-nav-link:active {
   color: #cf711f;
 }
-
 .main-nav-link.nav-cta:link,
 .main-nav-link.nav-cta:visited {
   padding: 1.2rem 2.4rem;
@@ -56,53 +189,14 @@
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
 }
-
-/* MOBILE */
-.btn-mobile-nav {
-  border: none;
-  background: none;
-  cursor: pointer;
-
-  display: none;
-}
-
-.icon-mobile-nav {
-  height: 4.8rem;
-  width: 4.8rem;
-  color: #333;
-}
-
-.icon-mobile-nav[name="close-outline"] {
-  display: none;
-}
-
-/* STICKY NAVIGATION */
-.sticky .header {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  height: 8rem;
-  padding-top: 0;
-  padding-bottom: 0;
-  background-color: rgba(255, 255, 255, 0.97);
-  z-index: 999;
-  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
-}
-
-.sticky .section-hero {
-  margin-top: 9.6rem;
-}
-
-/**************************/
-/* HERO SECTION */
-/**************************/
+/* ************************ */
+/* Hero section */
+/* ************************ */
 
 .section-hero {
-  background-color: #fdf2e9;
+  background-color: #fae5d3;
   padding: 4.8rem 0 9.6rem 0;
 }
-
 .hero {
   max-width: 130rem;
   margin: 0 auto;
@@ -119,7 +213,7 @@
   margin-bottom: 4.8rem;
 }
 
-.hero-img {
+.hero-image {
   width: 100%;
 }
 
@@ -130,67 +224,34 @@
   margin-top: 8rem;
 }
 
-.delivered-imgs {
+.deliverd {
   display: flex;
 }
-
-.delivered-imgs img {
+.deliverd img {
   height: 4.8rem;
   width: 4.8rem;
   border-radius: 50%;
   margin-right: -1.6rem;
   border: 3px solid #fdf2e9;
 }
-
-.delivered-imgs img:last-child {
+.deliverd img:last-child {
   margin: 0;
 }
-
-.delivered-text {
+.deliverd-text {
   font-size: 1.8rem;
   font-weight: 600;
 }
-
-.delivered-text span {
-  color: #cf711f;
+.deliverd-text span {
+  color: #e67e22;
   font-weight: 700;
 }
 
-/**************************/
-/* FEATURED IN SECTION */
-/**************************/
-
-.section-featured {
-  padding: 4.8rem 0 3.2rem 0;
-}
-
-.heading-featured-in {
-  font-size: 1.4rem;
-  text-transform: uppercase;
-  letter-spacing: 0.75px;
-  font-weight: 500;
-  text-align: center;
-  margin-bottom: 2.4rem;
-  color: #888;
-}
-
-.logos {
-  display: flex;
-  justify-content: space-around;
-}
-
-.logos img {
-  height: 3.2rem;
-  filter: brightness(0);
-  opacity: 50%;
-}
-
-/**************************/
-/* HOW IT WORKS SECTION */
-/**************************/
+/* ************************ */
+/* How it works section*/
+/* ************************ */
 
 .section-how {
-  padding: 9.6rem 0;
+  padding: 1.6rem 9.6rem;
 }
 
 .step-number {
@@ -223,12 +284,13 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
+/*
 .step-img-box::before {
   width: 60%;
   /* height: 60%; */
 
-  /* 60% of parent's width */
+/* 60% of parent's width */
+/*
   padding-bottom: 60%;
 
   background-color: #fdf2e9;
@@ -240,353 +302,11 @@
   padding-bottom: 45%;
   background-color: #fae5d3;
   z-index: -1;
-}
+} */
 
 .step-img {
-  width: 35%;
+  width: 80%;
   /* z-index: 10; */
-}
-
-/**************************/
-/* MEALS SECTION */
-/**************************/
-
-.section-meals {
-  padding: 9.6rem 0;
-}
-
-.meal {
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
-  border-radius: 11px;
-  overflow: hidden;
-  transition: all 0.4s;
-}
-
-.meal:hover {
-  transform: translateY(-1.2rem);
-  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
-}
-
-.meal-content {
-  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
-}
-
-.meal-tags {
-  margin-bottom: 1.2rem;
-  display: flex;
-  gap: 0.4rem;
-}
-
-.tag {
-  display: inline-block;
-  padding: 0.4rem 0.8rem;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  color: #333;
-  border-radius: 100px;
-  font-weight: 600;
-}
-
-.tag--vegetarian {
-  background-color: #51cf66;
-}
-.tag--vegan {
-  background-color: #94d82d;
-}
-.tag--paleo {
-  background-color: #ffd43b;
-}
-
-.meal-title {
-  font-size: 2.4rem;
-  color: #333;
-  font-weight: 600;
-  margin-bottom: 3.2rem;
-}
-
-.meal-attributes {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
-.meal-attribute {
-  font-size: 1.8rem;
-  display: flex;
-  align-items: center;
-  gap: 1.6rem;
-}
-
-.meal-icon {
-  height: 2.4rem;
-  width: 2.4rem;
-  color: #e67e22;
-}
-
-.meal-img {
-  width: 100%;
-}
-
-.all-recipes {
-  text-align: center;
-  font-size: 1.8rem;
-}
-
-/**************************/
-/* TESTIMONIALS SECTION */
-/**************************/
-
-.section-testimonials {
-  background-color: #fdf2e9;
-  display: grid;
-  grid-template-columns: 55fr 45fr;
-  align-items: center;
-}
-
-.testimonials-container {
-  padding: 9.6rem;
-}
-
-.testimonials {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  row-gap: 4.8rem;
-  column-gap: 8rem;
-}
-
-.testimonial-img {
-  width: 6.4rem;
-  border-radius: 50%;
-  margin-bottom: 1.2rem;
-}
-
-.testimonial-text {
-  font-size: 1.8rem;
-  line-height: 1.8;
-  margin-bottom: 1.6rem;
-}
-
-.testimonial-name {
-  font-size: 1.6rem;
-  color: #6f6f6f;
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1.6rem;
-  padding: 1.6rem;
-}
-
-.gallery-item {
-  overflow: hidden;
-}
-
-.gallery-item img {
-  display: block;
-  width: 100%;
-  transition: all 0.4s;
-}
-
-.gallery-item img:hover {
-  transform: scale(1.1);
-}
-
-/**************************/
-/* MEALS SECTION */
-/**************************/
-
-.section-pricing {
-  padding: 9.6rem 0;
-}
-
-.pricing-plan {
-  border-radius: 11px;
-
-  width: 75%;
-}
-
-.pricing-plan--starter {
-  justify-self: end;
-  border: 2px solid #fdf2e9;
-  padding: 4.6rem;
-}
-
-.pricing-plan--complete {
-  background-color: #fdf2e9;
-  padding: 4.8rem;
-  position: relative;
-  overflow: hidden;
-}
-
-.pricing-plan--complete::after {
-  content: "Best value";
-  position: absolute;
-  top: 6%;
-  right: -18%;
-
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  font-weight: 700;
-  color: #333;
-  background-color: #ffd43b;
-  padding: 0.8rem 8rem;
-  transform: rotate(45deg);
-}
-
-.plan-header {
-  text-align: center;
-  margin-bottom: 4.8rem;
-}
-
-.plan-name {
-  color: #cf711f;
-  font-weight: 600;
-  font-size: 2rem;
-  text-transform: uppercase;
-  letter-spacing: 0.75;
-  margin-bottom: 3.2rem;
-}
-
-.plan-price {
-  font-size: 6.2rem;
-  font-weight: 600;
-  color: #333;
-  margin-bottom: 1.6rem;
-}
-
-.plan-price span {
-  font-size: 3rem;
-  font-weight: 500;
-  margin-right: 0.8rem;
-}
-
-.plan-text {
-  font-size: 1.6rem;
-  line-height: 1.6;
-  color: #6f6f6f;
-}
-
-.plan-sing-up {
-  text-align: center;
-  margin-top: 4.8rem;
-}
-
-.plan-details {
-  font-size: 1.6rem;
-  line-height: 1.6;
-  text-align: center;
-}
-
-.feature-icon {
-  color: #e67e22;
-  height: 3.2rem;
-  width: 3.2rem;
-  background-color: #fdf2e9;
-  margin-bottom: 3.2rem;
-  padding: 1.6rem;
-  border-radius: 50%;
-}
-
-.feature-title {
-  font-size: 2.4rem;
-  color: #333;
-  font-weight: 700;
-  margin-bottom: 1.6rem;
-}
-
-.feature-text {
-  font-size: 1.8rem;
-  line-height: 1.8;
-}
-
-/**************************/
-/* CTA SECTION */
-/**************************/
-
-.section-cta {
-  /* top / right / bottom / left */
-  /* padding: 9.6rem 0 12.8rem 0; */
-
-  /* top / horizontal / left */
-  padding: 4.8rem 0 12.8rem;
-}
-
-.cta {
-  display: grid;
-  /* 2/3 = 66.6% + 1/3 = 33.3% */
-  grid-template-columns: 2fr 1fr;
-  /* background-color: #e67e22; */
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
-  border-radius: 11px;
-
-  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
-  overflow: hidden;
-}
-
-.cta-text-box {
-  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
-  color: #45260a;
-}
-
-.cta .heading-secondary {
-  /* color: #45260a; */
-  color: inherit;
-  margin-bottom: 3.2rem;
-}
-
-.cta-text {
-  font-size: 1.8rem;
-  line-height: 1.8;
-  margin-bottom: 4.8rem;
-}
-
-.cta-img-box {
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(235, 151, 78, 0.35),
-      rgba(230, 125, 34, 0.35)
-    ),
-    url("../img/eating.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.cta-form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 3.2rem;
-  row-gap: 2.4rem;
-}
-
-.cta-form label {
-  display: block;
-  font-size: 1.6rem;
-  font-weight: 500;
-  margin-bottom: 1.2rem;
-}
-
-.cta-form input,
-.cta-form select {
-  width: 100%;
-  padding: 1.2rem;
-  font-size: 1.8rem;
-  font-family: inherit;
-  color: inherit;
-  border: none;
-  background-color: #fdf2e9;
-  border-radius: 9px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-}
-
-.cta-form input::placeholder {
-  color: #aaa;
-}
-
-.cta *:focus {
-  outline: none;
-  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
 
 /**************************/
@@ -594,8 +314,9 @@
 /**************************/
 
 .footer {
-  padding: 12.8rem 0;
+  padding: 1.8rem 0;
   border-top: 1px solid #eee;
+  background-color: #fae5d3;
 }
 
 .grid--footer {
@@ -609,7 +330,7 @@
 
 .footer-logo {
   display: block;
-  margin-bottom: 3.2rem;
+  margin-bottom: 5.2rem;
 }
 
 .social-links {
@@ -633,7 +354,7 @@
 .footer-heading {
   font-size: 1.8rem;
   font-weight: 500;
-  margin-bottom: 4rem;
+  margin-bottom: 1rem;
 }
 
 .contacts {
