--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ body {
   display: block;
   font-size: 3.6rem;
   font-weight: 500;
-  color: #cf711f;
+  color: #fff;
   text-transform: uppercase;
   margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
@@ -103,7 +103,7 @@ body {
 .btn:link,
 .btn:visited {
   display: inline-block;
-  background-color: #e67e22;
+  background-color: #fff;
   text-decoration: none;
   font-size: 2rem;
   padding: 1.6rem 3.2rem;
@@ -113,7 +113,7 @@ body {
 }
 .btn--full:link,
 .btn--full:visited {
-  background-color: #e67e22;
+  background-color: #6c757d;
   color: #fff;
 }
 .btn--full:hover,
@@ -144,7 +144,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fae5d3;
+  background-color: #fff;
   /* Zato što hoćemo da bude kasnije sticky later */
   height: 9.8rem;
   padding: 0 4.8rem;
@@ -178,14 +178,14 @@ body {
 }
 .main-nav-link:link,
 .main-nav-link:active {
-  color: #cf711f;
+  color: #6c757d;
 }
 .main-nav-link.nav-cta:link,
 .main-nav-link.nav-cta:visited {
   padding: 1.2rem 2.4rem;
   border-radius: 9px;
   color: #fff;
-  background-color: #e67e22;
+  background-color: #6c757d;
 }
 
 .main-nav-link.nav-cta:hover,
@@ -244,11 +244,11 @@ svg {
   margin-top: 9.6rem;
 }
 /* ************************ */
-/* Hero section */
+/* Hero section */ 
 /* ************************ */
 
 .section-hero {
-  background-color: #fae5d3;
+  background-color: #fff;
   padding: 4.8rem 0 9.6rem 0;
 }
 .hero {
@@ -370,7 +370,7 @@ svg {
 .footer {
   padding: 1.8rem 0;
   border-top: 1px solid #eee;
-  background-color: #fae5d3;
+  background-color: #fff;
 }
 
 .grid--footer {
@@ -445,7 +445,8 @@ svg {
   height: 750px;
   object-fit: cover;
   padding-top: 1rem;
-  background-color: #fae5d3;
+  background-color: #fff;
+ 
 }
 .carousel-caption {
   color: #000;
